# ocsf-compat

./: README.md  build.sh  pyproject.toml
ocsf-compat/: pyproject.toml
ocsf-compat/ocsf_compat/: examples.py  validator.py
ocsf-compat/tests/: schema-1.0.0.json  schema-1.3.0-dev.json
ocsf-diff/: pyproject.toml
ocsf-diff/ocsf_diff/: __init__.py  __main__.py  compare.py  diff.py  factory.py  model.py
ocsf-diff/tests/: test_compare.py  test_find_ocsf_type.py  test_typing.py
ocsf-schema/: pyproject.toml
ocsf-schema/ocsf_schema/: __init__.py  json.py  model.py
ocsf-schema/tests/: test_parsing.py
ocsf_tools/compare/: __main__.py  compare.py  factory.py  model.py
ocsf_tools/compatibility/: __init__.py  __main__.py  changed_type.py  example.toml  increased_requirement.py  removed_records.py  removed_uids.py  validator.py
ocsf_tools/schema/: __init__.py  get_schema.py  http.py  json.py  model.py
ocsf_tools/schema_validation/: validator.py
ocsf_tools/validation/: __init__.py  compatibility.py  formatting.py  validator.py
tests/compare/: test_compare.py  test_factory.py
tests/compatibility/: test_changed_type.py  test_increased_requirement.py  test_removed_records.py  test_removed_uids.py
tests/schema/: schema.json  test_get_schema.py  test_http.py  test_parsing.py
tests/validation/: test_summarize.py  test_validator.py
type-hell/: pyproject.toml
type-hell/type_hell/: compare.py  diff.py  factory.py  model.py
