[tool.poetry]
name = "ocsf-tools"
version = "0.1.0"
description = "Tools for working with the OCSF schema"
authors = ["Jeremy Fisher <jeremy@query.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dacite = "^1.8.1" # TODO delete me after referencing a published ocsf-schema
semver = "^3.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pyright = "^1.1.361"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
    "unit: mark a test as a unit test",
]

[tool.ruff]
line-length = 120