[tool.poetry]
name = "ocsf-compat"
version = "0.1.0"
description = "Validate the backwards compatibility of two OCSF schemata"
authors = ["Jeremy Fisher <jeremy@query.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ocsf-schema = {path = "../ocsf-schema", develop = true}
ocsf-diff = {path = "../ocsf-diff", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
pyright = "^1.1.361"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
