[tool.poetry]
name = "ocsf-diff"
version = "0.1.0"
description = "Tools for comparing OCSF schemata"
authors = ["Jeremy Fisher <jeremy@query.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dacite = "^1.8.1" # TODO delete me after referencing a published ocsf-schema
ocsf-schema = {path = "../ocsf-schema", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pyright = "^1.1.361"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
