[tool.poetry]
name = "ocsf-schema"
version = "0.1.0"
description = ""
authors = ["Jeremy Fisher <jeremy@query.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pytest = "^8.2.0"
jsons = "^1.6.3"
pyright = "^1.1.360"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
