[tool.poetry]
name = "type-hell"
version = "0.1.0"
description = ""
authors = ["Jeremy Fisher <106115283+query-jeremy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pyright = "^1.1.361"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"